# Python-Alpha-Global-Routing

./: README.md  config.py  evaluate_solution.py  requirements.txt  router.py  router_simple.py  utils.py
evaluator/: compile.sh  evaluator.cpp
misc/: create_routing_video.py
scip_jack/: write.set
stp_solver/: CMakeLists.txt  README.md
stp_solver/src/: graph.hpp  iograph.hpp  lib.cpp  main.cpp
stp_solver/src/cpu/: CMakeLists.txt  disjoin_set.hpp  mst.hpp
stp_solver/tests/: CMakeLists.txt  cpu_disjoin_set.test.cpp  cpu_mst.test.cpp  iograph.test.cpp
